@@ -1,5 +1,6 @@
 Version 1.18.6 *
 ==================
+- added highlighting of project entries while running
 - fixed color theme issue when Windows is in dark mode and Studio is using light mode
 
 Version 1.18.5
